--- a/src/app/hotel-list/hotel-list.component.html
+++ b/src/app/hotel-list/hotel-list.component.html
@@ -7,9 +7,23 @@
         </span>
         <span>
             {{showBadge?'Cacher':'afficher'}} Afficher Nouveau
-
         </span>
     </button>
+    <hr>
+    <div class="my-2">
+      <div class="row">
+        <div class="col-md-4">
+          <span>Filtre actuel:</span>
+          <b>{{hotelFilter}}</b>
+        </div>
+        <div class="col-md-8 form-group">
+          <input type="text" class="form-control" [(ngModel)]="hotelFilter">
+          <!-- <input type="text" class="form-control" [ngModel]="hotelFilter" (ngModelChange)="hotelFilter=$event"> -->
+        </div>
+        
+      </div>
+      
+    </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col" *ngFor="let hotel of hotels ">
           <div class="card">
