--- a/src/app/hotel-list/hotel-list.component.html
+++ b/src/app/hotel-list/hotel-list.component.html
@@ -13,7 +13,7 @@
     <div class="my-2">
       <div class="row">
         <div class="col-md-4">
-          <span>Filtre actuel:</span>
+          <span class="filter">Filtre actuel:</span>
           <b>{{hotelFilter}}</b>
         </div>
         <div class="col-md-8 form-group">
