--- a/src/app/hotel-list/hotel-list.component.html
+++ b/src/app/hotel-list/hotel-list.component.html
@@ -25,7 +25,7 @@
       
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col" *ngFor="let hotel of hotels ">
+        <div class="col" *ngFor="let hotel of filteredHotels ">
           <div class="card">
             <img [src]="hotel.imageUrl" 
              [title]="hotel.hotelName |uppercase"
