--- a/src/app/hotel-list/hotel-list.component.html
+++ b/src/app/hotel-list/hotel-list.component.html
@@ -31,10 +31,10 @@
              [title]="hotel.hotelName |uppercase"
             class="card-img-top" [alt]="hotel.hotelName">
             <div class="card-body">
-              <h5 class="card-title">{{hotel.hotelName}}</h5>
+              <h5 class="card-title">{{hotel.hotelName |titlecase}}</h5>
               <p class="card-text">{{hotel.description}}</p>
                <p class="card-text">
-                {{hotel.price |currency : 'EUR' :  'symbol' : '1.2-2' : 'fr'}}
+                {{ hotel.price | currency  : 'EUR' :  'symbol' : '1.2-2' : 'fr' }}
                </p>
               <span class="badge bg-primary" *ngIf="showBadge">Nouveaux</span>
             </div>
